force-app/main/default/objects/JBCXM__GSProduct__c/JBCXM__GSProduct__c.object-meta.xml
<CustomObject>
    <label>GS Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>