force-app/main/default/objects/JBCXM__GSProduct__c/fields/JBCXM__Description__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>