force-app/main/default/objects/JBCXM__GSProduct__c/fields/JBCXM__ParentProduct__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ParentProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>JBCXM__GSProduct__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>