force-app/main/default/objects/JBCXM__GSProduct__c/fields/JBCXM__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ProductFamily__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Family</label>
    <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>GSProducts</relationshipName>
    <type>Lookup</type>
</CustomField>